Coverity analysis defect 149896: Data race condition

XMLWordPrintableJSON

    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v8.2, v8.0, v7.0
    • ClusterScalability Sep15-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/migration_chunk_cloner_source.cpp:411: MISSING_LOCK 149896 Accessing "this->_jumboChunkCloneState->clonerState" without holding lock "mongo::MigrationChunkClonerSource._mutex". Elsewhere, "mongo::MigrationChunkClonerSource::JumboChunkCloneState.clonerState" is written to with "MigrationChunkClonerSource._mutex" held 2 out of 2 times (2 of these accesses strongly imply that it is necessary).

            Assignee:
            Ben Gawel (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: