SERVER-109541 Coverity analysis defect 149896: Data race condition (#42259)

GitOrigin-RevId: d208ecad3e32b4ef979c41d639383ffa39f76dea