src/mongo/db/s/migration_chunk_cloner_source.cpp
@@ -421,6 +421,7 @@ StatusWith<BSONObj> MigrationChunkClonerSource::commitClone(OperationContext* op
                 return status;
             }
         } else {
+            stdx::lock_guard<stdx::mutex> sl(_mutex);
             invariant(PlanExecutor::IS_EOF == _jumboChunkCloneState->clonerState);
             invariant(!_cloneList.hasMore());
         }
